[package]
name = "calendar"
version = "0.1.0"
authors = ["Andreas Monitzer <andreas@monitzer.com>"]
edition = "2018"

[dependencies]
log = "0.4"
env_logger="0.6"
curl = "0.4.*"
chrono = "0.4"
redis = "0.10"
serde = "1.0"
serde_json = "1.0"

[dependencies.ical]
git = "https://github.com/Peltoche/ical-rs"
branch = "make-components-public"
default-features = false
features = ["ical"]
